--- a/01core/JQ17Append.html
+++ b/01core/JQ17Append.html
@@ -45,7 +45,7 @@
                 /*
                 html() 함수는 기존 콘텐츠를 제거한 후 새 콘텐츠를 추가
                 */
-                $("#appendDisplay").html(table);
+                //$("#appendDisplay").html(table);
             })
         })
     </script>
@@ -57,13 +57,13 @@
     <input type="number" id="col" value="2">열
     <input type="button" id="btn" value="동적테이블 추가">
 
-    <!--  -->
+    <!-- before()함수로 추가되는 위치   -->
     <div id="appendDisplay" style="border: 1px solid blue; padding:10px;">
         <!-- prependTo()함수로 추가되는 위치 -->
         여기에 생성됨
         <!-- append()함수로 추가되는 위치 -->
     </div>
-    <!--  -->
+    <!-- after()함수로 추가되는 위치 -->
 
 
 </body>
